--- a/css/Style.css
+++ b/css/Style.css
@@ -132,3 +132,22 @@ a{
      }
         
 }
+@media only screen and (max-width: 320px) /*media code for very very small devices*/
+ {
+     .header_items_link{
+      float:right;    
+      font-size:10px;
+      height: 50px;
+      padding: 15px 15px;
+      font-weight: bold; 
+     }
+     
+      .logo {
+            float: left;
+            height: 50px;
+            padding: 15px;
+            font-size: 16px;
+            font-weight: bold;
+        }
+        
+}
