--- a/css/Style.css
+++ b/css/Style.css
@@ -15,11 +15,13 @@ a{
        background-color:#000;   
        color:#fff;  
        border-color: #080808; 
-       min-height: 50px;   
+       min-height: 40px;
+       width: 100%;   
        border: 1px solid transparent; 
+       position:fixed;
 }
 .inner_header{
-    width: 80%;
+    width: 100%;
     margin: auto;
 }
 .logo{
@@ -46,14 +48,15 @@ span{
 }
 .banner-image{
       padding-bottom: 50px;  
-      margin-bottom: 20px;  
+      margin-bottom: 20px;
+      padding-top: 20px;
       text-align: center;  
       color: #f8f8f8;   
       background: url(../img/back_img.jpg) no-repeat center;
       background-size: cover; 
 }
 .inner-banner-image{
-      padding-top: 12%;
+      padding-top: 20%;
       width:80%;
       margin:auto; 
 }
