--- a/css/Style.css
+++ b/css/Style.css
@@ -11,7 +11,7 @@ a{
     background-color: transparent;
     color:#ededed;
 }
-.header{
+header{
        background-color:#000;   
        color:#fff;  
        border-color: #080808; 
@@ -19,6 +19,7 @@ a{
        width: 100%;   
        border: 1px solid transparent; 
        position:fixed;
+       
 }
 .inner_header{
     width: 100%;
@@ -26,14 +27,14 @@ a{
 }
 .logo{
      float: left; 
-     height: 50px; 
+     height: 30px; 
      padding: 15px; 
      font-size: 20px;
      font-weight: bold; 
 }
 .header_items_link{
       float:right;    
-      height: 50px;
+      height: 30px;
       padding: 15px 15px;
       font-size:16px;
       font-weight: bold; 
